--- a/css/main.css
+++ b/css/main.css
@@ -2,6 +2,7 @@
   --color-white: #fff;
   --color-light: #f8f9fa;
   --color-unaccent: #808080;
+  --color-medium: #e8e8e8;
 
   --spacing-small: 10px;
   --spacing-meidum: 15px;
